tests/machine/x/ocaml/inner_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/inner_join.ml", line 34, characters 6-15:
34 |     ) customers;
           ^^^^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 34):
  32 |         __res0 := { orderId = Obj.obj (List.assoc "id" o); customerName = Obj.obj (List.assoc "name" c); total = Obj.obj (List.assoc "total" o) } :: !__res0;
  33 |       )
  34 |     ) customers;
  35 |   ) orders;
  36 |   List.rev !__res0)
